added a little blurb about vsn ctl vs repo hosting

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -50,6 +50,29 @@ It helps you keep track of what you've done, when you did it, and what you're pl
 > 
 > --Mark T. Holder
 
+In order to version control a project, you generally need two things: a *version control system* 
+and a *repository hosting service*. The version control system is the software that is responsible 
+for tracking changes, sharing changes you make with others, obtaining changes others have made, and resolving conflicting edits.
+The repository hosting service is responsible for storing a copy of the version controlled project online, 
+where you and your collaborators can access it remotely, discuss issues and bugs, and distribute your final product. 
+For both of these items, there is a wide variety of choices; some of the more popular ones are:
+
+- **Version control systems:**
+    - [Git](https://git-scm.com) 
+    - [Mercurial](https://mercurial-scm.org)
+    - [Subversion](https://subversion.apache.org)
+- **Repository hosting service:**
+    - [GitHub](https://github.com)
+    - [GitLab](https://gitlab.com)
+    - [BitBucket](https://bitbucket.org)
+
+In this textbook we'll use Git for version control, and GitHub for repository hosting.
+
+> **Note:** technically, you don't *need* to use a repository hosting service. You can, for example, use Git to version control a project
+> that is stored only in a folder on your computer. But using a repository hosting service provides a few big benefits, including managing collaborator access permissions,
+> tools to discuss and track bugs, and the ability to have external collaborators contribute work, not to mention the safety of having your work backed up in the cloud. Since most
+> repository hosting services now offer free accounts, there are not many situations in which you wouldn't want to use one for your project. 
+
 
 ## Creating a space to share your code online
 
@@ -232,12 +255,6 @@ useful to be able to connect the project repository that was created on
 your local computer, or using a JupyterHub. Given that we use a JupyterHub with 
 this course, we will here show how to do this using a JupyterHub.
 
-Git is the software the does the job of tracking changes to a project, as well 
-as the moving of a project (and it's history) across different machines. Like 
-many other kinds of software, we as the users have to tell Git how and when to 
-do this. Git commands can be directly entered into a terminal/command line, 
-however there are many Git clients that make this process more user friendly. 
-For this book, we will use the Jupyter Git extension tool as our Git client.
 
 To bring a copy of our [GitHub](https://github.com/) project repository to 
 a JupyterHub, copy the url from the HTTPS tab of the Code drop down menu on 
