minor eds to vsn ctl overview

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -61,14 +61,14 @@ For both of these items, there is a wide variety of choices; some of the more po
     - [Git](https://git-scm.com) 
     - [Mercurial](https://mercurial-scm.org)
     - [Subversion](https://subversion.apache.org)
-- **Repository hosting service:**
+- **Repository hosting services:**
     - [GitHub](https://github.com)
     - [GitLab](https://gitlab.com)
     - [BitBucket](https://bitbucket.org)
 
 In this textbook we'll use Git for version control, and GitHub for repository hosting.
 
-> **Note:** technically, you don't *need* to use a repository hosting service. You can, for example, use Git to version control a project
+> **Note:** technically, you don't *need* a repository hosting service. You can, for example, use Git to version control a project
 > that is stored only in a folder on your computer. But using a repository hosting service provides a few big benefits, including managing collaborator access permissions,
 > tools to discuss and track bugs, and the ability to have external collaborators contribute work, not to mention the safety of having your work backed up in the cloud. Since most
 > repository hosting services now offer free accounts, there are not many situations in which you wouldn't want to use one for your project. 
