Final draft of index

--- a/index.Rmd
+++ b/index.Rmd
@@ -321,14 +321,12 @@ informative labels for the x and y axes. Again, since we are specifying words
 and `ylab`, we surround them with double quotes. There are many more layers we 
 can add to format the plot further, and we will explore these in later chapters.
 
-<center>
 ```{r mother_tongue_vs_most_at_home_labs, fig.width=5.75, fig.height=5, warning=FALSE}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
     geom_point() +
     xlab("Language spoken most at home (number of Canadian residents)") +
     ylab("Mother tongue (number of Canadian residents)")    
 ```
-</center>
 
 Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of this visualization. This is because many many more people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale. We can again add additional layers to the plot object using the `+` symbol to do this:
 
@@ -390,7 +388,6 @@ can_lang
 
 Finally, let's visualize the data now that we have represented it as proportions (and change our axis labels to reflect this change in units!):
 
-<center>
 ```{r mother_tongue_vs_most_at_home_scale_props, fig.width=5.75, fig.height=5, warning=FALSE}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
@@ -399,7 +396,6 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma)
 ```
-</center>
 
 From the visualization above, we can now clearly see that not just a lot, but that the majority of Canadians reported English as their mother tongue and as the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to interpret the numbers in our data set better.
 
@@ -411,7 +407,6 @@ scatter plot to represent each language's higher-level language category.
 
 To do this, we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
 
-<center>
 ```{r scatter_colour_by_category, fig.width=7.75, fig.height=4, warning=FALSE}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
   geom_point() +
@@ -420,7 +415,6 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma)
 ```
-</center>
 
 What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
 
@@ -434,7 +428,15 @@ see more of later in this course.
 
 ### Putting it all together
 
-Below, we put everything from this chapter together in one code chunk, with a few more layers to make the data visualization even more effective. This demonstrates the power of R: in relatively few lines of code, we are able to create an entire data science workflow.
+Below, we put everything from this chapter together in one code chunk. We have 
+added a few more layers to make the data visualization even more effective. 
+Specifically we used have improved the visualizations accessibility by choosing 
+colours that are easier to distinguish and also mapped category to 
+shape, we handled the problem of overlapping data points by making them slightly
+transparent, and we changed the background from grey to white to improve the 
+contrast. This demonstrates the power of R: in relatively few lines of code, we 
+are able to create an entire data science workflow with a highly effective
+data visualization.
 
 ```{r nachos_to_cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -446,13 +448,13 @@ can_lang <- mutate(can_lang, most_at_home = most_at_home / 35151728)
 
 ggplot(can_lang, aes(x = most_at_home, 
                      y = mother_tongue, 
-                     color = category,
-                     shape = category)) +
-  geom_point(alpha = 0.7) +
-  scale_color_manual(values = c("blue3","red3","black")) +
+                     colour = category,
+                     shape = category)) + # map categories to different shapes
+  geom_point(alpha = 0.6) + # set the transparency of the points
+  scale_color_manual(values = c("deepskyblue2","firebrick1","black")) + # choose point colours
   xlab("Language spoken most at home (number of Canadian residents)") +
   ylab("Mother tongue (number of Canadian residents)") +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma) +
-  theme_bw()
+  theme_bw() # use a theme to have a white background
 ```
