Replaced Bob and Alice with Jayden and Fatima to be more inclusive

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -65,19 +65,21 @@ happiness_data <- read_csv("data/happiness_report.csv")
 happiness_data <- read_csv("/home/jupyter/dsci-100/worksheet_02/data/happiness_report.csv")
 ```
 
-So which one should you use? Generally speaking, to ensure your code can be run on a different computer, you should use relative paths (and it's also less typing!). 
-This is because the absolute path of a file (the names of folders between the computer's root `/` and the file) isn't usually the same across multiple computers. 
-For example, suppose Alice and Bob are working on a project together
-on the `happiness_report.csv` data. Alice's file is stored at 
+So which one should you use? Generally speaking, to ensure your code can be run 
+on a different computer, you should use relative paths. An added bonus is that 
+it's also less typing! This is because the absolute path of a file (the names of 
+folders between the computer's root `/` and the file) isn't usually the same 
+across multiple computers. For example, suppose Fatima and Jayden are working on a 
+project together on the `happiness_report.csv` data. Fatima's file is stored at 
 
-`/home/alice/project/data/happiness_report.csv`, 
+`/home/Fatima/project/data/happiness_report.csv`, 
 
-while Bob's is stored at 
+while Jayden's is stored at 
 
-`/home/bob/project/data/happiness_report.csv`.
+`/home/Jayden/project/data/happiness_report.csv`.
  
-Even though Alice and Bob stored their files in the same place on their computers (in their home folders), the absolute paths are different due to their different usernames.
-If Bob has code that loads the `happiness_report.csv` data using an absolute path, the code won't work on Alice's computer.
+Even though Fatima and Jayden stored their files in the same place on their computers (in their home folders), the absolute paths are different due to their different usernames.
+If Jayden has code that loads the `happiness_report.csv` data using an absolute path, the code won't work on Fatima's computer.
 But the relative path from inside the `project` folder (`data/happiness_report.csv`) is the same on both computers; any code that uses relative paths will work on both!
 
 <!--Why would the absolute path not work on a different computer? The reason for this is that the names and the folder structure of the path between a computer's root 
