editing up to (not incl) 5.7 in vsn ctl

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -53,7 +53,7 @@ It helps you keep track of what you've done, when you did it, and what you're pl
 In order to version control a project, you generally need two things: a *version control system* 
 and a *repository hosting service*. The version control system is the software that is responsible 
 for tracking changes, sharing changes you make with others, obtaining changes others have made, and resolving conflicting edits.
-The repository hosting service is responsible for storing a copy of the version controlled project online, 
+The repository hosting service is responsible for storing a copy of the version controlled project online (a *repository*), 
 where you and your collaborators can access it remotely, discuss issues and bugs, and distribute your final product. 
 For both of these items, there is a wide variety of choices; some of the more popular ones are:
 
@@ -66,38 +66,21 @@ For both of these items, there is a wide variety of choices; some of the more po
     - [GitLab](https://gitlab.com)
     - [BitBucket](https://bitbucket.org)
 
-In this textbook we'll use Git for version control, and GitHub for repository hosting.
+In this textbook we'll use Git for version control, and GitHub for repository hosting, because both are currently the most widely-used platforms.
 
-> **Note:** technically, you don't *need* a repository hosting service. You can, for example, use Git to version control a project
+> **Note:** technically you don't *have to* use a repository hosting service. You can, for example, use Git to version control a project
 > that is stored only in a folder on your computer. But using a repository hosting service provides a few big benefits, including managing collaborator access permissions,
 > tools to discuss and track bugs, and the ability to have external collaborators contribute work, not to mention the safety of having your work backed up in the cloud. Since most
 > repository hosting services now offer free accounts, there are not many situations in which you wouldn't want to use one for your project. 
 
 
-## Creating a space to share your code online
+## Creating a space for your project online
 
-[GitHub](https://github.com/) is an example of a remote version control 
-repository and Internet hosting service that software developers, and data 
-scientists use to archive and share their projects. It has controls that allow
-users to selectively share their work at various levels of permissions with 
-collaborators as well as your project's intended audience. It interfaces with 
-local version control systems on a laptop or JupyterHub server, so that files 
-(including ones that contain code!) can be easily transferred and shared. 
-Projects live in GitHub in a space called a repository. We will demonstrate now 
-how to create such a space on for your data analysis project.
-
-> Other examples of remote version control repository and Internet hosting 
-> services include [GitLab](https://gitlab.com/) and 
-> [Bitbucket](https://bitbucket.org/). Here we will focus on GitHub because it is 
-> currently the most widely-used platform.
-
-Before you can create repositories, you will need a 
-[GitHub](https://github.com/) account. You can sign up for a free account 
-here: [https://github.com/](https://github.com/)
-
-To create new repository to host your project, Login to 
-[https://github.com/](https://github.com/) and click on the "+" icon in the upper right 
-hand corner, and then click on "New Repository" as shown below:
+Before you can create repositories, you will need a GitHub account;
+you can sign up for a free account at [https://github.com/](https://github.com/).
+Once you have logged into your account, you can create a new repository to host your project
+by clicking on the "+" icon in the upper right 
+hand corner, and then on "New Repository" as shown below:
 
 ```{r new_repository_01}
 #include_graphics("img/version_control/new_repository_01.png")
@@ -110,15 +93,12 @@ image_read("img/version_control/new_repository_01.png") %>%
 
 On the next page, do the following: 
 
-- enter the name for the repository (here we put `languages_in_canada`) 
-- Select "Public"
-- Select "Initialize this repository with a README"
-- click on the green "Create Repository" button
-
-> By clicking "Public" your repository is viewable by anyone, however, only you 
-and any collaborators you specify have permission to create or edit files. If 
-you have a project that needs to be kept private, you can instead select 
-"Private" when creating a repository.
+1. Enter the name for your project repository. In the example below, we use `languages_in_canada`. Most repositories follow this naming convention, which involves lowercase letter words separated by either underscores or hyphens.
+2. Choose an option for the privacy of your repository
+    1. If you select "Public", your repository may be *viewed* by anyone, but only you and collaborators you designate will be able to *modify* it.
+    2. If you select "Private", only you and your collaborators can *view* or *modify* it.
+3. Select "Add a README file." This creates a template `README.md` file in your repository's root folder.
+4. When you are happy with your repository name and configuration, click on the green "Create Repository" button.
 
 ```{r new_repository_02_old}
 #include_graphics("img/version_control/new_repository_02.png")
@@ -139,18 +119,17 @@ image_read("img/version_control/new_repository_03.png") %>%
 ```
 
 
-## Edit and add materials in your course repository on GitHub
+## Creating and editing files on GitHub
 
-There are several ways you can directly use the GitHub web interface; either 
-using the pen tool to edit existing files, or the “Add file” drop down where you 
-can choose to "Create new file" or "Upload files". This is useful for simple 
-documentation files, for example a project's `README.md` file.
+There are several ways to use the GitHub interface to add files to your repository and to edit them. 
+Below we cover how to use the pen tool to edit existing files, and how to use the “Add file” drop down 
+to create a new file or upload files from your computer. These techniques are useful for handling simple
+plaintext files, for example, the `README.md` file that is already present in the repository.
 
 
-### Use the pen tool to edit existing files
+### The pen tool
 
-The pen tool can be used to edit existing plain text files. Click on the pen 
-tool:
+The pen tool can be used to edit existing plaintext files. Click on the pen tool:
 
 ```{r pen_tool_01}
 image_read("img/version_control/pen-tool_01.png") %>% 
@@ -170,7 +149,10 @@ image_read("img/version_control/pen-tool_02.png") %>%
   #image_shadow()
 ```
 
-Save/commit your changes by click the green "Commit changes" button:
+Finally, *commit* your changes. When you *commit a file* in a repository, the version control system takes a snapshot
+of what the file looks like. As you continue working on the project, over time you will possibly make many commits to a single file; this generates
+a useful version history for that file. On GitHub, if you click the green "Commit changes" button, it will save the file and then make a commit.
+Do this now:
 
 ```{r pen_tool_03}
 image_read("img/version_control/pen-tool_03.png") %>% 
@@ -179,10 +161,11 @@ image_read("img/version_control/pen-tool_03.png") %>%
 ```
 
 
-### Use the "Add file" drop down menu and "Create new file" to create new plain text files
+### The "Add file" menu
 
-New, plain text files can be created via the "Add file" drop down menu and 
-selecting the "Create new file" option:
+The "Add file" menu can be used to create new plaintext files and upload files from your computer.
+To create a new plaintext file, click the "Add file" drop down menu and 
+select the "Create new file" option:
 
 ```{r create_new_file_01}
 image_read("img/version_control/create-new-file_01.png") %>% 
@@ -192,11 +175,12 @@ image_read("img/version_control/create-new-file_01.png") %>%
   #image_shadow()
 ```
 
-After click the "Create new file" option, a page will open with a small text box 
-for the file name to be entered, and a larger text box where the desired file 
+A page will open with a small text box for the file name to be entered, and a larger text box where the desired file 
 content text can be entered. Note the two tabs, "Edit new file" and "Preview". 
 Toggling between them lets you enter and edit text and view what the text will 
-look like when rendered, respectively.
+look like when rendered, respectively. Note that GitHub understands and renders `.md`
+files using a [markdown syntax](https://guides.github.com/pdfs/markdown-cheatsheet-online.pdf) very similar to
+Jupyter notebooks, so the "Preview" tab is especially helpful for checking markdown code correctness.
 
 ```{r create_new_file_02}
 image_read("img/version_control/create-new-file_02.png") %>% 
@@ -206,7 +190,7 @@ image_read("img/version_control/create-new-file_02.png") %>%
   #image_shadow()
 ```
 
-Save/commit your changes by click the green "Commit changes" button at the 
+Save and commit your changes by click the green "Commit changes" button at the 
 bottom of the page.
 
 ```{r create_new_file_03}
@@ -214,9 +198,6 @@ image_read("img/version_control/create-new-file_03.png") %>%
   image_crop("3632x1500+1+500") #%>% 
   #image_shadow()
 ```
-
-
-### Use the "Add file" drop down menu and "Upload files" to get files from my laptop to GitHub
 
 You can also upload files that you have created on your local machine by using 
 the "Add file" drop down menu and selecting "Upload files":
@@ -243,36 +224,39 @@ image_read("img/version_control/upload-files_02.png") %>%
   #image_shadow()
 ```
 
+Note that Git and GitHub are designed to track changes in individual files. *Do not*
+upload your whole project in an archive file (e.g. `.zip`), because
+then Git can only keep track of changes to the entire `.zip` file---that wouldn't be very useful
+if you're trying to see the history of changes to a single code file in your project!
 
-## Moving changes from GitHub to JupyterHub
+
+## Cloning your repository on JupyterHub
 
 Although there are several ways to create and edit files on 
-[GitHub](https://github.com/) they are not quite powerful enough for 
+GitHub, they are not quite powerful enough for 
 efficiently creating and editing complex files, or files that need to be 
 executed to assess whether they work (e.g., files containing code). Thus, it is 
 useful to be able to connect the project repository that was created on 
-[GitHub](https://github.com/) to a coding environment. This can be done on 
-your local computer, or using a JupyterHub. Given that we use a JupyterHub with 
-this course, we will here show how to do this using a JupyterHub.
+GitHub to a coding environment. This can be done on 
+your local computer, or using a JupyterHub; below we show how to do this using a JupyterHub.
 
-
-To bring a copy of our [GitHub](https://github.com/) project repository to 
-a JupyterHub, copy the url from the HTTPS tab of the Code drop down menu on 
-[GitHub](https://github.com/) to your computer's clipboard:
+We need to *clone* our project's Git repository to our JupyterHub---i.e., make a copy that knows where it was obtained from so that it knows where
+send/receive new committed edits. In order to do this, first copy the url from the HTTPS tab of the Code drop down menu on 
+GitHub:
 
 ```{r clone_02}
 image_read("img/version_control/clone_02.png") %>% 
   image_crop("3632x1500")
 ```
 
-Then from JupyterHub, click the Git+ icon on the file browser tab:
+Then open JupyterHub, and click the Git+ icon on the file browser tab:
 
 ```{r clone_01}
 image_read("img/version_control/clone_01.png") %>% 
   image_crop("2400x1430+1")
 ```
 
-Paste the url of the [GitHub](https://github.com/) project repository you 
+Paste the url of the GitHub project repository you 
 created and click the blue "CLONE" button:
 
 ```{r clone_03}
@@ -281,35 +265,38 @@ image_read("img/version_control/clone_03.png") %>%
 ```
 
 On the file browser tab, you will now see a folder for your project's repository 
-(and inside it will be all the files that existed on 
-[GitHub](https://github.com/)):
+(and inside it will be all the files that existed on GitHub):
 
 ```{r clone_04}
 image_read("img/version_control/clone_04.png") %>% 
   image_crop("2400x1430+1")
 ```
 
-## Sending changes you make on JupyterHub back to GitHub
+## Working in a cloned repository on JupyterHub 
 
-Once you make changes, by creating or editing files, in your project repository 
-on JupyterHub, you will need to send them back to the project repository on 
-[GitHub](https://github.com/) to be able to share these with your 
-collaborators and audience. Again, we can use the Jupyter lab Git extension tool 
-to do this. It is a three stage process which includes: 
+Now that you have cloned your repository on JupyterHub, you can get to work 
+editing, creating, and deleting files. Once you reach a point that you want 
+Git to keep a record of the current version, you need to *commit* (i.e., snapshot) your changes.
+Then once you have made commits that you want to share with your collaborators,
+you need to *push* (i.e., send) those commits back to GitHub.
+Again, we can use the JupyterHub Git extension tool 
+to do all of this. In particular, your workflow on JupyterHub should look like this:
 
-1. Specifying which files to "add" to the staging area. You can think of this as
-a command which flags which modified files you want to send back to the project 
-repository on [GitHub](https://github.com/).
-2. Logging the changes to the flagged files on the local machine (which for us 
-is a JupyterHub). This step requires specifying an associated (useful) message 
-about what was changed. This step is called a "commit".
-3. Push the added and committed changes that currently exist locally (i.e., on 
-JupyterHub) to the project repository on [GitHub](https://github.com/)
+1. You edit, create, and delete files in your cloned repository on JupyterHub.
+2. Once you want a record of the current version, you specify which files to "add" to Git's *staging area*. You can think of files in the staging area as
+those modified files for which you want a snapshot.
+3. You commit those flagged files to your repository, and include a helpful *commit message* to tell your collaborators about the changes
+you made. **Note:** here you are *only* committing to your *cloned repository* stored on JupyterHub. The repository on GitHub has not changed, and your collaborators
+cannot see your work yet.
+4. Go back to step 1. and keep working! 
+5. When you want to share your commits (that only exist in your cloned repository right now) with your collaborators, you *push* them
+back to the hosted repository on GitHub.
 
-Below we walk-through how you can use the Jupyter lab git extension tool to do 
+
+Below we walk through how to use the JupyterHub Git extension tool to do 
 each of the steps outlined above.
 
-### Specifying which files whose changes you want to commit
+### Specifying files to commit
 
 Below we created and saved a new file (named `eda.ipynb`) that we would 
 like to send back to the project repository on [GitHub](https://github.com/). 
@@ -344,7 +331,7 @@ them and associate a (useful) message about what was changed.
 image_read("img/version_control/git_add_03.png")
 ```
 
-### Log the changes and an associated (useful) message about what was changed
+### Making the commit
 
 To log the changes and an associated (useful) message about what was 
 changed, we put our message in the text box at the bottom of the Git GUI pane 
@@ -372,7 +359,7 @@ project repository on [GitHub](https://github.com/):
 image_read("img/version_control/git_commit_03.png")
 ```
 
-#### 3. Pushing the changes to [GitHub.com](https://github.com/)
+### Pushing the commits to GitHub
 
 To send our added and committed the changes to the project repository on 
 [GitHub](https://github.com/), we need to "Push" them. To do this we click on 
