--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -279,7 +279,7 @@ editing, creating, and deleting files. Once you reach a point that you want
 Git to keep a record of the current version, you need to *commit* (i.e., snapshot) your changes.
 Then once you have made commits that you want to share with your collaborators,
 you need to *push* (i.e., send) those commits back to GitHub.
-Again, we can use the JupyterHub Git extension tool 
+Again, we can use the JupyterLab Git extension tool 
 to do all of this. In particular, your workflow on JupyterHub should look like this:
 
 1. You edit, create, and delete files in your cloned repository on JupyterHub.
@@ -289,9 +289,8 @@ those modified files for which you want a snapshot.
 you made. **Note:** here you are *only* committing to your *cloned repository* stored on JupyterHub. The repository on GitHub has not changed, and your collaborators
 cannot see your work yet.
 4. Go back to step 1. and keep working! 
-5. When you want to share your commits (that only exist in your cloned repository right now) with your collaborators, you *push* them
+5. When you want to store your commits (that only exist in your cloned repository right now) on the cloud where they can be shared with your collaborators, you *push* them
 back to the hosted repository on GitHub.
-
 
 Below we walk through how to use the JupyterHub Git extension tool to do 
 each of the steps outlined above.
@@ -299,33 +298,34 @@ each of the steps outlined above.
 ### Specifying files to commit
 
 Below we created and saved a new file (named `eda.ipynb`) that we would 
-like to send back to the project repository on [GitHub](https://github.com/). 
-To "add" this modified file to the staging area (*i.e.*, flagging that this is a
-file whose changes we would like to log), we click the Jupyter lab git extension 
-icon on the far left-hand side of Jupyter lab:
+like to send back to the project repository on GitHub.
+To "add" this modified file to the staging area (*i.e.*, flag that this is a
+file whose changes we would like to commit), we click the JupyterLab git extension 
+icon on the far left-hand side of JupyterLab:
 
 ```{r git_add_01}
 image_read("img/version_control/git_add_01.png")
 ```
 
-This opens the Jupyter lab Git graphical user interface (GUI) pane, and then we
-click the plus sign beside the file that we want to "add". Note, because this is 
-the first change for this file that we want to add, it lives under the 
+This opens the JupyterLab Git graphical user interface pane, and then we
+click the plus sign beside the file that we want to "add". 
+
+> **Note:** because this is the first change for this file that we want to add, it falls under the 
 "Untracked" heading. However, next time we edit this file and want to add the 
 changes we made, we will find it under the "Changed" heading.
 
-> Note: we can ignore the `eda-checkpoint.ipynb` file (sometimes called `.ipynb_checkpoints`), as it can be thought of as another type of "back-up" of 
-our Jupyter notebook file we created, and we only need to send the file we 
-directly created and edited to [GitHub](https://github.com/).
+> **Note:** do not add the `eda-checkpoint.ipynb` file (sometimes called `.ipynb_checkpoints`). This file is 
+automatically created by Jupyter when you work on `eda.ipynb`. You generally do not add auto-generated files to Git repositories,
+only add the files you directly create and edit.
 
 ```{r git_add_02}
 image_read("img/version_control/git_add_02.png")
 ```
 
 This moves the file from the "Untracked" heading to the "Staged" heading, 
-essentially flagging this file, so that Git knows this is a change we'd like to 
-log and share with others. Now we are ready to now "commit" the changes to log 
-them and associate a (useful) message about what was changed.
+flagging this file so that Git knows we want a snapshot of its current state as a commit.
+Now we are ready to "commit" the changes. Make sure to include a (clear and helpful!) message about what was changed
+so that your collaborators (and future you) know what happened in this commit. 
 
 ```{r git_add_03}
 image_read("img/version_control/git_add_03.png")
@@ -333,14 +333,12 @@ image_read("img/version_control/git_add_03.png")
 
 ### Making the commit
 
-To log the changes and an associated (useful) message about what was 
-changed, we put our message in the text box at the bottom of the Git GUI pane 
-and click on the blue "Commit" button. 
-
-> It is highly recommended to write useful and meaningful messages about what 
-was changed, as these commit messages, and the time date stamp for a given 
-commit, are the primary means to navigate through our projects histry in the 
-situation where we'd like to view or retrieve a past version of a file, or 
+To snapshot the changes with an associated commit message, we put the message in the text box 
+at the bottom of the Git pane and click on the blue "Commit" button. 
+It is highly recommended to write useful and meaningful messages about what 
+was changed. These commit messages, and the datetime stamp for a given 
+commit, are the primary means to navigate through the project's histry in the 
+ event that we need to view or retrieve a past version of a file, or 
 revert our project to an earlier state.
 
 ```{r git_commit_01}
@@ -353,7 +351,7 @@ image_read("img/version_control/git_commit_01.png")
 
 After "commiting" the file(s), you will see there there are 0 "Staged" files and we 
 are now ready to push our changes (and the attached commit message) to our 
-project repository on [GitHub](https://github.com/):
+project repository on GitHub:
 
 ```{r git_commit_03}
 image_read("img/version_control/git_commit_03.png")
@@ -361,15 +359,15 @@ image_read("img/version_control/git_commit_03.png")
 
 ### Pushing the commits to GitHub
 
-To send our added and committed the changes to the project repository on 
-[GitHub](https://github.com/), we need to "Push" them. To do this we click on 
+To send the committed changes back to the project repository on 
+GitHub, we need to *push* them. To do this we click on 
 the cloud icon with the up arrow on the Jupyter Git tab:
 
 ```{r git_push_01}
 image_read("img/version_control/git_push_01.png")
 ```
 
-We will then be prompted to enter our [GitHub](https://github.com/) username 
+We will then be prompted to enter our GitHub username 
 and password, and click the blue "OK" button:
 
 ```{r git_push_02}
@@ -377,30 +375,28 @@ image_read("img/version_control/git_push_02.png")
 ```
 
 If the files were successfully pushed to our project repository on 
-[GitHub](https://github.com/) we will be given the success message shown 
+GitHub we will be given the success message shown 
 below. Click "Dismiss" to continue working in Jupyter.
 
 ```{r git_push_03}
 image_read("img/version_control/git_push_03.png")
 ```
 
-If you now go to the project repository on [GitHub](https://github.com/) you 
-will see the changes now exist there!
+You will see that the changes now exist there!
 
 ```{r git_push_04}
 image_read("img/version_control/git_push_04.png") %>% 
   image_crop("3632x2000")
 ```
 
-## Strategies for collaboration when using version control
+## Collaboration
 
 ### Giving collaborators access to your project
 
 As mentioned earlier, GitHub allows you to control who has access to your 
 project. The default of both public and private projects are that only the 
 person who created the GitHub repository has permissions to create, edit and 
-delete files (this is called write access). To give others (i.e., your 
-collaborators) write access to the projects, navigate to the "Settings" tab:
+delete files (*write access*). To give your collaborators write access to the projects, navigate to the "Settings" tab:
 
 ```{r add_collab_01}
 image_read("img/version_control/add_collab_01.png") %>% 
@@ -414,7 +410,7 @@ image_read("img/version_control/add_collab_02.png") %>%
   image_crop("3632x1200")
 ```
 
-And then click the green "Invite a collaborator" button:
+Click the green "Invite a collaborator" button:
 
 ```{r add_collab_03}
 image_read("img/version_control/add_collab_03.png") %>% 
@@ -437,15 +433,20 @@ image_read("img/version_control/add_collab_05.png") %>%
 ```
 
 After this you should see your newly added collaborator listed under the 
-"Manage access" tab, and they should receive an email invitation to join the 
-GitHub repository as a collaborator. They need to accept this invitation via 
-their email invitation to enable their ability to have and use write access.
+"Manage access" tab. They should receive an email invitation to join the 
+GitHub repository as a collaborator. They need to accept this invitation 
+to enable write access.
 
-### Pulling changes from [GitHub](https://github.com/)
+### Pulling changes from GitHub
 
-If your collaborators send changes to your project and you want to see and work
-with them locally (i.e., on JupyterHub) then you need to "pull" those changes to 
-the copy of the project repository on JupyterHub to get things in sync. 
+If your collaborators send their own commits to the GitHub repository, you will need to
+*pull* those changes to your own cloned copy on JupyterHub before you're allowed to push
+any more changes yourself. By pulling their changes, you sync your local repository
+to what is present on GitHub.  
+
+> **Note:** you can still work on your own cloned repository and commit changes even if collaborators
+have pushed changes to the GitHub repository. It is only when you try to *push* your changes back to GitHub
+that Git will make sure nobody else has pushed any work in the meantime. 
 
 ```{r git_pull_00}
 image_read("img/version_control/git_pull_00.png") %>% 
@@ -472,18 +473,17 @@ you should be able to see them:
 image_read("img/version_control/git_pull_03.png")
 ```
 
-It can be very useful to review the history of the changes to your project, you
+It can be very useful to review the history of the changes to your project. You
 can do this directly on the JupyterHub by clicking "History" in the Git tab.
 
 ```{r git_pull_04}
 image_read("img/version_control/git_pull_04.png")
 ```
 
-It is good practice when collaborating with others, that you pull any changes 
-your collaborators might have pushed to GitHub at the start of every work 
-session. If you do not do this, and your collaborators have pushed some changes
+It is good practice to pull any changes at the start of *every* work session before
+you start working on your local copy. If you do not do this, and your collaborators have pushed some changes
 to the project to GitHub, then you will be unable to push your changes to 
-GitHub. This situation can be recognized by this error message:
+GitHub until you pull. This situation can be recognized by this error message:
 
 ```{r merge_conflict_01}
 image_read("img/version_control/merge_conflict_01.png") %>% 
@@ -492,13 +492,12 @@ image_read("img/version_control/merge_conflict_01.png") %>%
 
 Usually, getting out of this situation is not too troublesome. First you need to 
 pull the changes that exist on GitHub that you do not yet have on your machine.
-Usually when this happens, Git can  automatically merge the changes for you, 
+Usually when this happens, Git can automatically merge the changes for you, 
 even if you and your collaborators were working on different parts of the same 
 file!
 
 If however, you and your collaborators made changes to the same line of the same
-file, Git will not be able to automatically merge the changes when you pull 
-them, as it will not know whether to keep your version of the line(s), your 
+file, Git will not be able to automatically merge the changes---it will not know whether to keep your version of the line(s), your 
 collaborators version of the line(s), or some blend of the two. When this 
 happens, Git will tell you that you have a merge conflict and that it needs 
 human intervention (you!), and which file(s) this occurs in.
@@ -530,64 +529,46 @@ image_read("img/version_control/merge_conflict_05.png") %>%
   image_crop("3632x1200")
 ```
 
-Once you have decided which version of the change to keep, you need to use the 
-plain text editor to remove the special marks that Git added to tell you where 
-the merge conflict was, as well as edit the changes so that only a single 
-version of the change is left in the file (either your version, your 
-collaborator's version, or some blend of the two). 
+Once you have decided which version of the change (or what combination!) to keep, you need to use the 
+plain text editor to remove the special marks that Git added.  
 
 ```{r merge_conflict_06}
 image_read("img/version_control/merge_conflict_06.png") %>% 
   image_crop("3632x1200")
 ```
 
-The file must be saved, and then added and committed before you will be able to 
-push the changes to GitHub.
+The file must be saved, added to the staging area, and then committed before you will be able to 
+push your changes to GitHub.
 
 ### Communicating using GitHub issues
 
-When communicating with collaborators regarding ideas, feedback, decisions and 
-other such things about the project, what communication platform should be used
-for written communication? At first glance, email and messaging apps appear to 
-be reasonable choices, but both have flaws that can lead to loss of information
-and non-inclusive team dynamics. 
+When working on a project in a team, you don't just want a historical record of who changed
+what file and when in the project---you also want a record of decisions that were made, 
+ideas that were floated, problems that were identified and addressed, and all other 
+communication surrounding the project. Email and messaging apps are both very popular for general communication, but are not
+designed for project-specific communication: they both generally do not have facilities for organizing conversations by project subtopics,
+searching for conversations related to particular bugs or software versions, etc.
 
-Email has become a standard written communication platform which is ubiquitously
-used, however, in many cases, much human intervention is required to keep emails
-correctly filed and archived so that it is easy to go back and review all past 
-written communications related to a particular project. Additionally, when 
-working in a team on a project, it is easy to unintentionally leave someone off
-of a team email, and as a consequence some team members can miss out on 
-important information and decision-making opportunities for the project. 
-
-Many messaging apps, allow for channels, where all team members are invited, and thus
-leaving someone out of a conversation is less likely, however, organizing 
-conversations into topics within a project channel, as well as searching for 
-past conversations is usually quite challenging in these apps, as they were not 
-designed for these purposes.
-
-GitHub issues are an alternative written communication medium to email and 
-messaging apps, and were designed specifically to facilitate project-level 
-communication. GitHub issues are created from the issues tab in the project's
-GitHub repository, and they persist there even after the issue is closed (in 
-contrast to email, issues are not deleted). One issue thread is usually created
+GitHub *issues* are an alternative written communication medium to email and 
+messaging apps, and were designed specifically to facilitate project-specific 
+communication. Issues are *opened* from the "Issues" tab on the project's
+GitHub page, and they persist there even after the conversation is over and the issue is *closed* (in 
+contrast to email, issues are not usually deleted). One issue thread is usually created
 per topic, and they are easily searchable using GitHub's search tools. All 
 issues are accessible to all project collaborators, so no one is left out of 
 the conversation. Finally, issues can be setup so that team members get email 
-notifications when a new issue is created, or a new post is made in an issue 
-thread - so adding another notification system is not needed. Replying to issues 
-from email is also possible. Thus, due to all of these advantages for 
-project-level communication, we highly recommend their use for all written
-project-related communications with collaborators.
+notifications when a new issue is created or a new post is made in an issue 
+thread. Replying to issues from email is also possible. Given all of these advantages,
+ we highly recommend the use of issues for project-related communication.
 
-To open a GitHub issue, first click on the GitHub issues tab:
+To open a GitHub issue, first click on the "Issues" tab:
 
 ```{r issue_01}
 image_read("img/version_control/issue_01.png") %>% 
   image_crop("3632x1250")
 ```
 
-Next click new issue:
+Next click the "New issue" button:
 
 ```{r issue_02}
 image_read("img/version_control/issue_02.png") %>% 
@@ -595,7 +576,7 @@ image_read("img/version_control/issue_02.png") %>%
 ```
 
 Add an issue title (which acts like an email subject line), and then put the 
-written communication in the larger text box. Finally click "Submit new issue"
+body of the message in the larger text box. Finally click "Submit new issue"
 to post the issue to share with others:
 
 ```{r issue_03}
@@ -611,10 +592,22 @@ image_read("img/version_control/issue_04.png") %>%
   image_crop("3632x2000")
 ```
 
-When a conversation is resolved, you can click "Close issue", and closed issue 
-can be later viewed be clicking "Closed" header link in the issue tab:
+When a conversation is resolved, you can click "Close issue". The closed issue 
+can be later viewed be clicking the "Closed" header link in the "Issue" tab:
 
 ```{r issue_06}
 image_read("img/version_control/issue_06.png") %>% 
   image_crop("3632x1900")
 ```
+
+## Additional readings/resources
+
+Now that you've picked up the basics of version control with Git and GitHub, you can expand your knowledge using 
+one of the many tutorials available online:
+- GitHub's [guides website](https://guides.github.com/)
+- GitHub's [YouTube channel](https://www.youtube.com/githubguides)
+- BitBucket's [tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
+
+
+
+
